--- a/front_end/profile.html
+++ b/front_end/profile.html
@@ -307,64 +307,46 @@
     });
 
     // Update profile
-    document.getElementById('profileForm').addEventListener('submit', async (e) => {
-        e.preventDefault();
+   document.getElementById('profileForm').addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const formData = new FormData();
+    formData.append('first_name', document.getElementById('first_name').value.trim());
+    formData.append('last_name', document.getElementById('last_name').value.trim());
+    formData.append('email', document.getElementById('email').value.trim());
+    const imageFile = document.getElementById('profile_image').files[0];
+    if (imageFile) formData.append('avatar', imageFile);
+    const messageEl = document.getElementById('updateMessage');
+    messageEl.textContent = 'Updating...';
+    try {
+        const response = await fetch(BASE_URL + '/api/profile/', {
+            method: 'PUT',
+            headers: { 'Authorization': `Bearer ${localStorage.getItem('access_token')}` },
+            body: formData
+        });
+        if (!response.ok) throw new Error((await response.json()).detail || 'Failed');
+        messageEl.textContent = 'Updated!';
+        loadProfile();
+    } catch (err) {
+        messageEl.textContent = 'Failed: ' + err.message;
+    }
+});
 
-        const formData = new FormData();
-        formData.append('first_name', document.getElementById('first_name').value.trim());
-        formData.append('last_name', document.getElementById('last_name').value.trim());
-        formData.append('email', document.getElementById('email').value.trim());
-
-        const imageFile = document.getElementById('profile_image').files[0];
-        if (imageFile) {
-            formData.append('avatar', imageFile);
+        if (!response.ok) {
+            const errorData = await response.json().catch(() => ({}));
+            throw new Error(errorData.detail || 'Update failed');
         }
 
-        const messageEl = document.getElementById('updateMessage');
-        messageEl.textContent = 'Updating...';
-        messageEl.style.color = '#007bff';
+        messageEl.textContent = 'Profile updated successfully!';
+        messageEl.style.color = '#28a745';
 
-        try {
-            const response = await fetch('https://fittrack-api-7b9k.onrender.com/api/profile/', {
-                method: 'PATCH',
-                headers: {
-                    'Authorization': `Bearer ${localStorage.getItem('access_token')}`
-                },
-                body: formData
-            });
-
-            if (!response.ok) {
-                const errorData = await response.json().catch(() => ({}));
-                throw new Error(errorData.detail || 'Update failed');
-            }
-
-            const updatedUser = await response.json();
-
-            messageEl.textContent = 'Profile updated successfully!';
-            messageEl.style.color = 'green';
-
-            if (updatedUser.avatar) {
-                const fullUrl = updatedUser.avatar;
-                document.getElementById('previewImage').src = fullUrl;
-                document.getElementById('sidebarPhoto').src = fullUrl;
-                document.getElementById('mobilePhoto').src = fullUrl;
-            }
-
-            const fullName = `${updatedUser.first_name} ${updatedUser.last_name}`.trim() || updatedUser.username;
-            document.getElementById('sidebarName').textContent = fullName;
-            document.getElementById('mobileName').textContent = fullName;
-            document.getElementById('detailName').textContent = fullName;
-
-            document.getElementById('sidebarEmail').textContent = updatedUser.email;
-            document.getElementById('mobileEmail').textContent = updatedUser.email;
-            document.getElementById('detailEmail').textContent = updatedUser.email;
-
-        } catch (err) {
-            console.error(err);
-            messageEl.textContent = err.message || 'Failed to update';
-            messageEl.style.color = 'red';
-        }
-    });
+        // Reload profile data to reflect changes
+        loadProfile();
+    } catch (err) {
+        console.error('Update error:', err);
+        messageEl.textContent = 'Update failed: ' + err.message;
+        messageEl.style.color = '#dc3545';
+    }
+});
 
     loadProfile();
 </script>
