fix issue in create new user

--- a/front_end/dashboard.html
+++ b/front_end/dashboard.html
@@ -47,10 +47,10 @@
     <!-- Sidebar (Desktop) -->
     <div class="sidebar d-none d-md-block">
         <div class="text-center mb-5">
-            <img src="https://placehold.co/100x100" alt="Profile" class="rounded-circle mb-3" width="100">
-            <h5>David Musyoka</h5>
-            <p>davidngumbau29@gmail.com</p>
-        </div>
+    <img id="sidebar-avatar" src="https://placehold.co/100x100" alt="Profile" class="rounded-circle mb-3" width="100">
+    <h5 id="sidebar-name">Loading...</h5>
+    <p id="sidebar-email">Loading...</p>
+</div>
         <a href="dashboard.html" class="active"><i class="fas fa-home"></i> Dashboard</a>
         <a href="progress.html"><i class="fas fa-chart-line"></i> Progress</a>
         <a href="add_activity.html"><i class="fas fa-dumbbell"></i> Workouts</a>
