--- a/front_end/add_activity.html
+++ b/front_end/add_activity.html
@@ -33,18 +33,19 @@
 </head>
 <body>
 
-    <!-- Sidebar (Desktop) -->
+    <!-- Sidebar (Desktop) - NOW DYNAMIC -->
     <div class="sidebar d-none d-md-block">
         <div class="text-center mb-5">
-            <img src="https://placehold.co/100x100" alt="Profile" class="rounded-circle mb-3" width="100">
-            <h5>DAVID MUSYOKA</h5>
-            <p>DAVIDNGUMBAU29@GMAIL.COM</p>
+            <img id="sidebar-avatar" src="https://placehold.co/100x100" alt="Profile" class="rounded-circle mb-3" width="100">
+            <h5 id="sidebar-name">Loading...</h5>
+            <p id="sidebar-email">Loading...</p>
         </div>
-        <a href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
         <a href="progress.html"><i class="fas fa-chart-line"></i> Progress</a>
         <a href="add_activity.html" class="active"><i class="fas fa-dumbbell"></i> Workouts</a>
+        <a href="training_plan.html"><i class="fas fa-calendar-alt"></i> Plan</a>
         <a href="profile.html"><i class="fas fa-user"></i> Profile</a>
-        <a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
+        <a href="#" onclick="logout(); return false;"><i class="fas fa-sign-out-alt"></i> Logout</a>
     </div>
 
     <!-- Main Content -->
@@ -61,32 +62,36 @@
                 <form id="addActivityForm">
                     <div class="mb-3">
                         <label class="form-label">Activity Type</label>
-                        <select class="form-select form-select-lg" required>
-                            <option>Running</option>
-                            <option>Cycling</option>
-                            <option>Weightlifting</option>
-                            <option>Yoga</option>
-                            <option>Swimming</option>
+                        <select class="form-select form-select-lg" id="activity_type" required>
+                            <option value="">Select activity</option>
+                            <option value="Running">Running</option>
+                            <option value="Cycling">Cycling</option>
+                            <option value="Weightlifting">Weightlifting</option>
+                            <option value="Yoga">Yoga</option>
+                            <option value="Swimming">Swimming</option>
+                            <option value="Walking">Walking</option>
+                            <option value="Other">Other</option>
                         </select>
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Duration (minutes)</label>
-                        <input type="number" class="form-control form-control-lg" placeholder="e.g., 45" required>
+                        <input type="number" class="form-control form-control-lg" id="duration" placeholder="e.g., 45" min="1" required>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Distance (km)</label>
-                        <input type="number" step="0.1" class="form-control form-control-lg" placeholder="e.g., 5.5">
+                        <label class="form-label">Distance (km) <small class="text-muted">(optional)</small></label>
+                        <input type="number" step="0.1" class="form-control form-control-lg" id="distance_km" placeholder="e.g., 5.5">
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Date</label>
-                        <input type="date" class="form-control form-control-lg" required>
+                        <input type="date" class="form-control form-control-lg" id="date" required>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Notes</label>
-                        <textarea class="form-control" rows="3" placeholder="How did it feel?"></textarea>
+                        <label class="form-label">Notes <small class="text-muted">(optional)</small></label>
+                        <textarea class="form-control" id="notes" rows="3" placeholder="How did it feel? Any achievements?"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary btn-lg w-100">Save Workout</button>
                 </form>
+                <div id="form-message" class="mt-3 text-center"></div>
             </div>
         </div>
     </div>
@@ -94,25 +99,83 @@
     <!-- Bottom Nav (Mobile) -->
     <div class="bottom-nav d-md-none text-center">
         <div class="row">
-            <div class="col"><a href="index.html"><i class="fas fa-home"></i><br>Home</a></div>
+            <div class="col"><a href="dashboard.html"><i class="fas fa-home"></i><br>Dashboard</a></div>
             <div class="col"><a href="progress.html"><i class="fas fa-chart-line"></i><br>Progress</a></div>
             <div class="col"><a href="add_activity.html" class="active"><i class="fas fa-dumbbell"></i><br>Workouts</a></div>
+            <div class="col"><a href="training_plan.html"><i class="fas fa-calendar-alt"></i><br>Plan</a></div>
             <div class="col"><a href="profile.html"><i class="fas fa-user"></i><br>Profile</a></div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/api.js"></script>
+    <script src="assets/js/auth.js"></script>
+
     <script>
         // Auth check
-        if (!localStorage.getItem('access_token')) window.location.href = 'index.html';
+        if (!localStorage.getItem('access_token')) {
+            window.location.href = 'index.html';
+        }
 
-        // Form submit (add apiPost later)
+        // Set today's date as default
+        document.getElementById('date').valueAsDate = new Date();
+
+        // Load user profile for sidebar
+        async function loadUserProfile() {
+            try {
+                const userData = await apiGet('/api/profile/');
+                const fullName = `${userData.first_name || ''} ${userData.last_name || ''}`.trim() || userData.username;
+                document.getElementById('sidebar-name').textContent = fullName;
+                document.getElementById('sidebar-email').textContent = userData.email || 'No email';
+
+                if (userData.avatar) {
+                    document.getElementById('sidebar-avatar').src = userData.avatar;
+                }
+            } catch (err) {
+                console.error('Failed to load profile:', err);
+                document.getElementById('sidebar-name').textContent = 'Guest';
+                document.getElementById('sidebar-email').textContent = 'Not loaded';
+            }
+        }
+
+        // Form submission
         document.getElementById('addActivityForm').addEventListener('submit', async (e) => {
             e.preventDefault();
-            // Collect form data and apiPost('/api/activities/', data)
-            alert('Workout saved!');  // Placeholder
+            const messageEl = document.getElementById('form-message');
+            messageEl.textContent = '';
+            messageEl.className = 'mt-3 text-center';
+
+            const data = {
+                activity_type: document.getElementById('activity_type').value,
+                duration: parseInt(document.getElementById('duration').value),
+                distance_km: parseFloat(document.getElementById('distance_km').value) || 0,
+                date: document.getElementById('date').value,
+                notes: document.getElementById('notes').value.trim() || null
+            };
+
+            // Client-side calories estimation (optional, for UX)
+            let calPerMin = 8;
+            if (data.activity_type.toLowerCase().includes('run') || data.activity_type.toLowerCase().includes('swim')) calPerMin = 12;
+            if (data.activity_type.toLowerCase().includes('cycle')) calPerMin = 10;
+            if (data.activity_type.toLowerCase().includes('yoga')) calPerMin = 4;
+            if (data.activity_type.toLowerCase().includes('weight')) calPerMin = 6;
+            data.calories_burned = Math.round(data.duration * calPerMin);
+
+            try {
+                await apiPost('/api/activities/', data);
+                messageEl.textContent = 'Workout saved successfully! 🎉';
+                messageEl.classList.add('text-success');
+                document.getElementById('addActivityForm').reset();
+                document.getElementById('date').valueAsDate = new Date(); // Reset date to today
+            } catch (err) {
+                console.error('Save failed:', err);
+                messageEl.textContent = 'Failed to save workout. Please try again.';
+                messageEl.classList.add('text-danger');
+            }
         });
+
+        // Load profile on page load
+        loadUserProfile();
     </script>
 </body>
 </html>
