--- a/front_end/profile.html
+++ b/front_end/profile.html
@@ -135,9 +135,10 @@
             <h5 id="sidebarName">Loading...</h5>
             <p id="sidebarEmail">Loading...</p>
         </div>
-        <a href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
         <a href="progress.html"><i class="fas fa-chart-line"></i> Progress</a>
         <a href="add_activity.html"><i class="fas fa-dumbbell"></i> Workouts</a>
+        <a href="training_plan.html"><i class="fas fa-calendar-alt"></i> Plan</a>
         <a href="profile.html" class="active"><i class="fas fa-user"></i> Profile</a>
         <a href="#" onclick="logout(); return false;"><i class="fas fa-sign-out-alt"></i> Logout</a>
     </div>
@@ -172,15 +173,15 @@
 
                     <div class="mb-3">
                         <label>First Name</label>
-                        <input type="text" id="first_name" class="form-control">
+                        <input type="text" id="first_name" class="form-control" placeholder="First Name">
                     </div>
                     <div class="mb-3">
                         <label>Last Name</label>
-                        <input type="text" id="last_name" class="form-control">
+                        <input type="text" id="last_name" class="form-control" placeholder="Last Name">
                     </div>
                     <div class="mb-3">
                         <label>Email</label>
-                        <input type="email" id="email" class="form-control">
+                        <input type="email" id="email" class="form-control" placeholder="Email">
                     </div>
 
                     <button type="submit" class="btn btn-primary w-100">Update Profile</button>
@@ -200,12 +201,11 @@
                         <div class="accordion-body">
                             Name: <span id="detailName">Loading...</span><br>
                             Email: <span id="detailEmail">Loading...</span><br>
-                            Joined: December 2025
+                            Member Since: <span id="joinedDate">Loading...</span>
                         </div>
                     </div>
                 </div>
 
-                <!-- Add more accordion items as needed -->
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#stats">
@@ -214,9 +214,9 @@
                     </h2>
                     <div id="stats" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            Total Workouts: 45<br>
-                            Total Distance: 120 km<br>
-                            Calories Burned: 15,000
+                            Total Workouts: <span id="statWorkouts">0</span><br>
+                            Total Distance: <span id="statDistance">0</span> km<br>
+                            Total Calories Burned: <span id="statCalories">0</span>
                         </div>
                     </div>
                 </div>
@@ -229,9 +229,9 @@
                     </h2>
                     <div id="settings" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            Change Password<br>
-                            Notification Preferences<br>
-                            Unit System (km/miles)
+                            Change Password (Coming soon)<br>
+                            Notification Preferences (Coming soon)<br>
+                            Unit System: km (Default)
                         </div>
                     </div>
                 </div>
@@ -242,113 +242,128 @@
     <!-- Bottom Nav (Mobile) -->
     <div class="bottom-nav d-md-none text-center">
         <div class="row">
-            <div class="col"><a href="index.html"><i class="fas fa-home"></i><br>Home</a></div>
+            <div class="col"><a href="dashboard.html"><i class="fas fa-home"></i><br>Dashboard</a></div>
             <div class="col"><a href="progress.html"><i class="fas fa-chart-line"></i><br>Progress</a></div>
             <div class="col"><a href="add_activity.html"><i class="fas fa-dumbbell"></i><br>Workouts</a></div>
+            <div class="col"><a href="training_plan.html"><i class="fas fa-calendar-alt"></i><br>Plan</a></div>
             <div class="col"><a href="profile.html" class="active"><i class="fas fa-user"></i><br>Profile</a></div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/api.js"></script>
-    <script>
-    // Auth Guard
-    const token = localStorage.getItem('access_token');
-    if (!token) {
-        window.location.href = 'index.html';
-    }
+    <script src="assets/js/auth.js"></script>
 
-    window.addEventListener('unhandledrejection', event => {
-        if (event.reason?.message?.includes('401')) {
-            localStorage.clear();
+    <script>
+        // Auth Guard
+        if (!localStorage.getItem('access_token')) {
             window.location.href = 'index.html';
         }
-    });
 
-    async function loadProfile() {
-        try {
-            const user = await apiGet('/api/profile/');
-            const imageUrl = user.avatar || 'https://placehold.co/120x120';
-
-            document.getElementById('sidebarPhoto').src = imageUrl;
-            document.getElementById('mobilePhoto').src = imageUrl;
-            document.getElementById('previewImage').src = imageUrl;
-
-            const fullName = `${user.first_name} ${user.last_name}`.trim() || user.username;
-            document.getElementById('sidebarName').textContent = fullName;
-            document.getElementById('mobileName').textContent = fullName;
-            document.getElementById('detailName').textContent = fullName;
-
-            document.getElementById('sidebarEmail').textContent = user.email;
-            document.getElementById('mobileEmail').textContent = user.email;
-            document.getElementById('detailEmail').textContent = user.email;
-
-            document.getElementById('first_name').value = user.first_name || '';
-            document.getElementById('last_name').value = user.last_name || '';
-            document.getElementById('email').value = user.email || '';
-        } catch (err) {
-    console.error('Failed to load profile:', err);
-    // Do NOT redirect — show error instead
-    document.body.innerHTML = '<div style="text-align:center;margin-top:50px;"><h3>Failed to load profile</h3><p>Check console for details or try logging in again.</p></div>';
-}
-    }
-
-    // Clickable preview
-    document.getElementById('previewImage').onclick = () => {
-        document.getElementById('profile_image').click();
-    };
-
-    // Preview image
-    document.getElementById('profile_image').addEventListener('change', (e) => {
-        const file = e.target.files[0];
-        if (file) {
-            document.getElementById('previewImage').src = URL.createObjectURL(file);
-        }
-    });
-
-    // Update profile
-   document.getElementById('profileForm').addEventListener('submit', async (e) => {
-    e.preventDefault();
-    const formData = new FormData();
-    formData.append('first_name', document.getElementById('first_name').value.trim());
-    formData.append('last_name', document.getElementById('last_name').value.trim());
-    formData.append('email', document.getElementById('email').value.trim());
-    const imageFile = document.getElementById('profile_image').files[0];
-    if (imageFile) formData.append('avatar', imageFile);
-    const messageEl = document.getElementById('updateMessage');
-    messageEl.textContent = 'Updating...';
-    try {
-        const response = await fetch(BASE_URL + '/api/profile/', {
-            method: 'PUT',
-            headers: { 'Authorization': `Bearer ${localStorage.getItem('access_token')}` },
-            body: formData
+        // Handle 401 globally
+        window.addEventListener('unhandledrejection', event => {
+            if (event.reason?.message?.includes('401')) {
+                localStorage.clear();
+                window.location.href = 'index.html';
+            }
         });
-        if (!response.ok) throw new Error((await response.json()).detail || 'Failed');
-        messageEl.textContent = 'Updated!';
-        loadProfile();
-    } catch (err) {
-        messageEl.textContent = 'Failed: ' + err.message;
-    }
-});
 
-        if (!response.ok) {
-            const errorData = await response.json().catch(() => ({}));
-            throw new Error(errorData.detail || 'Update failed');
+        async function loadProfileAndStats() {
+            try {
+                const [userData, statsData] = await Promise.all([
+                    apiGet('/api/profile/'),
+                    apiGet('/api/stats/')
+                ]);
+
+                const fullName = `${userData.first_name || ''} ${userData.last_name || ''}`.trim() || userData.username;
+                const avatarUrl = userData.avatar || 'https://placehold.co/120x120';
+
+                // Update all profile displays
+                document.getElementById('sidebarPhoto').src = avatarUrl;
+                document.getElementById('mobilePhoto').src = avatarUrl;
+                document.getElementById('previewImage').src = avatarUrl;
+
+                document.getElementById('sidebarName').textContent = fullName;
+                document.getElementById('mobileName').textContent = fullName;
+                document.getElementById('detailName').textContent = fullName;
+
+                document.getElementById('sidebarEmail').textContent = userData.email || 'No email';
+                document.getElementById('mobileEmail').textContent = userData.email || 'No email';
+                document.getElementById('detailEmail').textContent = userData.email || 'No email';
+
+                // Form fields
+                document.getElementById('first_name').value = userData.first_name || '';
+                document.getElementById('last_name').value = userData.last_name || '';
+                document.getElementById('email').value = userData.email || '';
+
+                // Joined date (fallback)
+                document.getElementById('joinedDate').textContent = 'December 2025'; // Replace with user.date_joined if available
+
+                // Stats
+                document.getElementById('statWorkouts').textContent = statsData.total_activities || 0;
+                document.getElementById('statDistance').textContent = (statsData.total_distance || 0).toFixed(1);
+                document.getElementById('statCalories').textContent = statsData.total_calories || 0;
+
+            } catch (err) {
+                console.error('Failed to load profile/stats:', err);
+            }
         }
 
-        messageEl.textContent = 'Profile updated successfully!';
-        messageEl.style.color = '#28a745';
+        // Image preview
+        document.getElementById('previewImage').onclick = () => {
+            document.getElementById('profile_image').click();
+        };
 
-        // Reload profile data to reflect changes
-        loadProfile();
-    } catch (err) {
-        console.error('Update error:', err);
-        messageEl.textContent = 'Update failed: ' + err.message;
-        messageEl.style.color = '#dc3545';
-    }
-});
+        document.getElementById('profile_image').addEventListener('change', (e) => {
+            const file = e.target.files[0];
+            if (file) {
+                document.getElementById('previewImage').src = URL.createObjectURL(file);
+            }
+        });
 
-    loadProfile();
-</script>
+        // Update profile
+        document.getElementById('profileForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const messageEl = document.getElementById('updateMessage');
+            messageEl.textContent = 'Updating...';
+            messageEl.style.color = '#007bff';
+
+            const formData = new FormData();
+            formData.append('first_name', document.getElementById('first_name').value.trim());
+            formData.append('last_name', document.getElementById('last_name').value.trim());
+            formData.append('email', document.getElementById('email').value.trim());
+
+            const imageFile = document.getElementById('profile_image').files[0];
+            if (imageFile) formData.append('avatar', imageFile);
+
+            try {
+                const response = await fetch(BASE_URL + '/api/profile/', {
+                    method: 'PUT',
+                    headers: {
+                        'Authorization': `Bearer ${localStorage.getItem('access_token')}`
+                    },
+                    body: formData
+                });
+
+                if (!response.ok) {
+                    const errorData = await response.json().catch(() => ({}));
+                    throw new Error(errorData.detail || 'Update failed');
+                }
+
+                messageEl.textContent = 'Profile updated successfully!';
+                messageEl.style.color = '#28a745';
+
+                // Reload fresh data
+                loadProfileAndStats();
+            } catch (err) {
+                console.error('Update error:', err);
+                messageEl.textContent = 'Update failed: ' + err.message;
+                messageEl.style.color = '#dc3545';
+            }
+        });
+
+        // Load on page ready
+        loadProfileAndStats();
+    </script>
 </body>
 </html>
