--- a/front_end/training_plan.html
+++ b/front_end/training_plan.html
@@ -33,19 +33,19 @@
 </head>
 <body>
 
-    <!-- Sidebar (Desktop) -->
+    <!-- Sidebar (Desktop) - NOW DYNAMIC -->
     <div class="sidebar d-none d-md-block">
         <div class="text-center mb-5">
-            <img src="https://placehold.co/100x100" alt="Profile" class="rounded-circle mb-3" width="100">
-            <h5>DAVID MUSYOKA</h5>
-            <p>DAVIDNGUMBAU29@GMAIL.COM</p>
+            <img id="sidebar-avatar" src="https://placehold.co/100x100" alt="Profile" class="rounded-circle mb-3" width="100">
+            <h5 id="sidebar-name">Loading...</h5>
+            <p id="sidebar-email">Loading...</p>
         </div>
-        <a href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
         <a href="progress.html"><i class="fas fa-chart-line"></i> Progress</a>
         <a href="add_activity.html"><i class="fas fa-dumbbell"></i> Workouts</a>
         <a href="training_plan.html" class="active"><i class="fas fa-calendar-alt"></i> Training Plan</a>
         <a href="profile.html"><i class="fas fa-user"></i> Profile</a>
-        <a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
+        <a href="#" onclick="logout(); return false;"><i class="fas fa-sign-out-alt"></i> Logout</a>
     </div>
 
     <!-- Main Content -->
@@ -58,7 +58,7 @@
 
         <div class="container">
             <div class="plan-card">
-                <h3 class="text-center mb-4">Your Weekly Training Plan</h3>
+                <h3 class="text-center mb-4" id="plan-greeting">Your Weekly Training Plan</h3>
                 <ul class="nav nav-tabs mb-4" id="planTabs" role="tablist">
                     <li class="nav-item" role="presentation">
                         <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#beginner">Beginner Running</button>
@@ -71,7 +71,9 @@
                 <div class="tab-content">
                     <div class="tab-pane fade show active" id="beginner">
                         <table class="table table-bordered">
-                            <thead><tr><th>Day</th><th>Workout</th><th>Duration/Distance</th></tr></thead>
+                            <thead>
+                                <tr><th>Day</th><th>Workout</th><th>Duration/Distance</th></tr>
+                            </thead>
                             <tbody>
                                 <tr><td>Monday</td><td>Easy Run</td><td>30 min</td></tr>
                                 <tr><td>Tuesday</td><td>Rest or Yoga</td><td>-</td></tr>
@@ -85,7 +87,9 @@
                     </div>
                     <div class="tab-pane fade" id="strength">
                         <table class="table table-bordered">
-                            <thead><tr><th>Day</th><th>Focus</th><th>Exercises</th></tr></thead>
+                            <thead>
+                                <tr><th>Day</th><th>Focus</th><th>Exercises</th></tr>
+                            </thead>
                             <tbody>
                                 <tr><td>Monday</td><td>Upper Body</td><td>Push-ups, Pull-ups, Bench Press</td></tr>
                                 <tr><td>Tuesday</td><td>Lower Body</td><td>Squats, Lunges, Deadlifts</td></tr>
@@ -98,6 +102,9 @@
                         </table>
                     </div>
                 </div>
+                <p class="text-muted text-center mt-4">
+                    <small>These are sample plans. In the future, your plan will be personalized based on your goals and progress!</small>
+                </p>
             </div>
         </div>
     </div>
@@ -105,7 +112,7 @@
     <!-- Bottom Nav (Mobile) -->
     <div class="bottom-nav d-md-none text-center">
         <div class="row">
-            <div class="col"><a href="index.html"><i class="fas fa-home"></i><br>Home</a></div>
+            <div class="col"><a href="dashboard.html"><i class="fas fa-home"></i><br>Dashboard</a></div>
             <div class="col"><a href="progress.html"><i class="fas fa-chart-line"></i><br>Progress</a></div>
             <div class="col"><a href="add_activity.html"><i class="fas fa-dumbbell"></i><br>Workouts</a></div>
             <div class="col"><a href="training_plan.html" class="active"><i class="fas fa-calendar-alt"></i><br>Plan</a></div>
@@ -115,9 +122,43 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/api.js"></script>
+    <script src="assets/js/auth.js"></script>
+
     <script>
-        if (!localStorage.getItem('access_token')) window.location.href = 'index.html';
-        // Future: Fetch user-specific plan from API and populate table
+        // Auth check
+        if (!localStorage.getItem('access_token')) {
+            window.location.href = 'index.html';
+        }
+
+        // Load user profile for sidebar and personalized greeting
+        async function loadUserProfile() {
+            try {
+                const userData = await apiGet('/api/profile/');
+
+                // Sidebar
+                const fullName = `${userData.first_name || ''} ${userData.last_name || ''}`.trim() || userData.username;
+                document.getElementById('sidebar-name').textContent = fullName;
+                document.getElementById('sidebar-email').textContent = userData.email || 'No email';
+
+                if (userData.avatar) {
+                    document.getElementById('sidebar-avatar').src = userData.avatar;
+                }
+
+                // Personalized greeting
+                document.getElementById('plan-greeting').textContent = 
+                    `${userData.first_name || userData.username || 'Athlete'}'s Weekly Training Plan`;
+            } catch (err) {
+                console.error('Failed to load profile:', err);
+                document.getElementById('sidebar-name').textContent = 'Guest';
+                document.getElementById('sidebar-email').textContent = 'Not loaded';
+            }
+        }
+
+        // Future enhancement: Fetch user-specific plan from backend
+        // async function loadCustomPlan() { ... }
+
+        // Load profile on page load
+        loadUserProfile();
     </script>
 </body>
 </html>
